keep old value in cache